--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 tweepy==3.5.0
-pandas==0.19.2
+pandas==0.20.3
 nltk==3.2.2
-tensorflow-gpu==1.1.0
-Keras==2.0.4
-h5py==2.6.0
+tensorflow-gpu==1.3.0
+Keras==2.0.8
+h5py==2.7.1
 matplotlib==2.0.0
 scikit-learn==0.18.1
+#scipy==0.19.1
+#numpy==1.13.3
