--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ tensorflow-gpu==1.3.0
 Keras==2.0.8
 h5py==2.7.1
 matplotlib==2.0.0
-scikit-learn==0.18.1
+scikit-learn==0.19.1
 lime==0.1.1.29
 #scipy==0.19.1
 #numpy==1.13.3
+imbalanced-learn==0.3.3
